Updated team pages with logos and team colors

--- a/src/Teams.css
+++ b/src/Teams.css
@@ -102,8 +102,8 @@ h2 {
 }
 
 .hecklers {
-  background-color: #55565b;
-  color: #3f928d;
+  background-color: #001835;
+  color: #ec6e20;
   width: 100%;
   height: 100%;
 }
@@ -183,7 +183,7 @@ h2 {
 }
 .sloclaps {
   background-color: #653101;
-  color: #f85726;
+  color: #e77a2f;
   width: 100%;
   height: 100%;
 }
