--- a/src/Teams.css
+++ b/src/Teams.css
@@ -19,7 +19,10 @@ h2 {
   font-size: 25px;
   margin-right: 10%;
   margin-left: 10%;
-  padding-bottom: 25%;
+}
+iframe {
+  display: block;
+  margin: auto;
 }
 .baddog {
   background-color: #0d2340;
